--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -14,7 +14,7 @@
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
-    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
+    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post i portalen skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
     "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)**\n",
     "  * data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
     "    * datasettet har kategorierna:\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7777ecf0",
+   "id": "796e2af0",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788c67a2",
+   "id": "2c77ab26",
    "metadata": {},
    "outputs": [],
    "source": []
