--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,7 +10,7 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.01\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.02\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
@@ -46,7 +46,9 @@
     "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
     "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
     "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare...\n",
-    "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå..."
+    "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå...\n",
+    "1. Skolor identifieras av Skolverket och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/) borde inte detta id finnas i detta API? Var skickar man change requests? Finns dom på GITHUB? \n",
+    "  1. i Wikidata har vi ett projekt där vi försöker identifiera **alla skolor som någonsin har funnits i Sverige** dvs. idag har vi alla skolor i skolenhetsregistret med unika Wikidata Qnummer se [Wikidata:WikiProject_Sweden/Schools](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Schools)"
    ]
   },
   {
