--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -47,7 +47,7 @@
     "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
     "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare...\n",
     "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå...\n",
-    "1. Skolor identifieras av Skolverket och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/) borde inte detta id finnas i detta API? Var skickar man change requests? Finns dom på GITHUB? \n",
+    "1. **Skolenheter identifieras** av Skolverket och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/) borde inte detta id finnas i detta API? Var skickar man change requests? Finns dom på GITHUB? \n",
     "  1. i Wikidata har vi ett projekt där vi försöker identifiera **alla skolor som någonsin har funnits i Sverige** dvs. idag har vi alla skolor i skolenhetsregistret med unika Wikidata Qnummer se [Wikidata:WikiProject_Sweden/Schools](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Schools)\n",
     "  1. Exempel Öxnered skola\n",
     "     1. Skolregistret har skolenhetskod [68637661](https://api.scb.se/UF0109/v2/skolenhetsregister/sv/skolenhet/68637661)\n",
