--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,7 +10,7 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.04\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.05\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
@@ -47,17 +47,19 @@
     "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
     "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare...\n",
     "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå...\n",
-    "1. **Skolenheter identifieras** av Skolverket och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/) borde inte detta id finnas i detta API? Var skickar man change requests? Finns dom på GITHUB? \n",
+    "1. **Skolenheter identifieras** av Skolverket(enl. [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800)) och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/) borde inte detta id finnas i detta API? Var skickar man change requests? Finns dom på GITHUB? Tycker det är sådan info som borde finnas i svenska dataporalen så man enkelt kan hitta så man kan jobba med datat... samma API 290 ggr blir galet...\n",
     "  1. i Wikidata har vi ett projekt där vi försöker identifiera **alla skolor som någonsin har funnits i Sverige** dvs. idag har vi alla skolor i skolenhetsregistret med unika Wikidata Qnummer se [Wikidata:WikiProject_Sweden/Schools](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Schools)\n",
     "  1. Exempel Öxnered skola\n",
     "     1. Skolregistret har skolenhetskod [68637661](https://api.scb.se/UF0109/v2/skolenhetsregister/sv/skolenhet/68637661)\n",
     "        1. beskrivning av [SCB när nya skolenhetskoder skapas](https://www.scb.se/contentassets/6a9472ed9e474943bac8a30391b0ceb1/nar-ska-forandringar-av-skolenheter-leda-till-ny-skolenhetskod.pdf)\n",
-    "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola"
+    "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
+    "     \n",
+    ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "796e2af0",
    "metadata": {},
    "outputs": [
@@ -65,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2022-06-10 08:59:00.744244\n"
+      "Last run:  2022-06-10 11:49:33.190044\n"
      ]
     }
    ],
