--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -28,7 +28,12 @@
     "* dataportalen \"[Skolmaten på Lidingö](https://www.dataportal.se/datasets/238_35328)\" -> metadata **[238_35328](https://admin.dataportal.se/store/238/metadata/35328?recursive=dcat)**\n",
     "  * data.europa.eu \"[Skolmaten på Lidingö](https://data.europa.eu/data/datasets/https-lidingo-entryscape-net-store-1-resource-72?locale=en)\" pekar på samma API men finns bara med svenskt namn och har bara kategorin \"[lidingo-city-in-sweden](https://data.europa.eu/data/datasets?keywords=lidingo-city-in-sweden&locale=en)\"\n",
     "* dataportalen \"[Skolmat i Skövde kommun](https://www.dataportal.se/datasets/286_4451)\" -> metadata **[286_4451](https://admin.dataportal.se/store/286/metadata/4451?recursive=dcat)**\n",
-    "  * data.europa.eu \"[School meals in Skövde municipality](https://data.europa.eu/data/datasets/https-skovde-entryscape-net-store-1-resource-10?locale=en) pekar på samma API men skrivit ihop kategorierna\n",
+    "  * data.europa.eu \"[School meals in Skövde municipality](https://data.europa.eu/data/datasets/https-skovde-entryscape-net-store-1-resource-10?locale=en) pekar på samma API men skrivit ihop kategorierna **[skolmat,-mat,-meny](https://data.europa.eu/data/datasets?keywords=skolmat,-mat,-meny&locale=en)**\n",
+    "    * keyword felet kommer från [metadatat på svenska portalen](https://admin.dataportal.se/store/238/metadata/35328?recursive=dcat) - kanske saknas kontrollmekanismer?!?!?\n",
+    "    \n",
+    ">> <dcat:keyword xml:lang=\"sv\">skolmat, mat, meny</dcat:keyword>\n",
+    ">> <dcat:keyword xml:lang=\"en\">school meals, food, menu</dcat:keyword>\n",
+    "\n",
     "* dataportalen \"[Skolmaten - Södertälje](https://www.dataportal.se/datasets/75_1264/skolmaten#ref=?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[75_1264](https://admin.dataportal.se/store/75/metadata/1264?recursive=dcat)**\n",
     "  * data.europa.eu \"[School food](https://data.europa.eu/data/datasets/https-catalog-sodertalje-se-store-1-resource-161?locale=en)\" massa kategorier \n",
     "  \n",
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "796e2af0",
    "metadata": {},
    "outputs": [
@@ -67,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2022-06-10 11:49:33.190044\n"
+      "Last run:  2022-06-10 12:56:03.338723\n"
      ]
     }
    ],
