--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -58,7 +58,7 @@
     "     1. Skolregistret har skolenhetskod [68637661](https://api.scb.se/UF0109/v2/skolenhetsregister/sv/skolenhet/68637661)\n",
     "        1. beskrivning av [SCB när nya skolenhetskoder skapas](https://www.scb.se/contentassets/6a9472ed9e474943bac8a30391b0ceb1/nar-ska-forandringar-av-skolenheter-leda-till-ny-skolenhetskod.pdf)\n",
     "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
-    "     \n",
+    "     1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
     ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,"
    ]
   },
