--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -59,7 +59,11 @@
     "        1. beskrivning av [SCB när nya skolenhetskoder skapas](https://www.scb.se/contentassets/6a9472ed9e474943bac8a30391b0ceb1/nar-ska-forandringar-av-skolenheter-leda-till-ny-skolenhetskod.pdf)\n",
     "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
     "     1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
-    ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,"
+    ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,\n",
+    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll eller knyta en bild till maten.... det pratades om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts.... det som hittats....\n",
+    "  1. GITHUB som inte säger mer https://sambruk.github.io/Open-Meal/docs/background\n",
+    "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom\n",
+    "leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt...."
    ]
   },
   {
@@ -744,9 +748,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3d23ccd",
+   "metadata": {},
+   "source": [
+    "## Hämta mat serverad\n",
+    "går ej eftersom nyckel behövs... dock finns [exempel](https://skolmaten.se/about/api/#applikation) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7c7a8a37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extra data: line 1 column 5 (char 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "urlskolmat = \"https://skolmaten.se/api/openmeal/v2/menu.json?client=TestNotebook\"\n",
+    "r_skolmat = http.request('GET', urlskolmat)\n",
+    "try:\n",
+    "    dataMat = json.loads(r_skolmat.data)\n",
+    "    dfMat = pd.json_normalize(dataMat[\"data\"])\n",
+    "except Exception as e: print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52fd7321",
+   "metadata": {},
+   "source": [
+    "Fungerar ej måste ha en client token"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a33730ab",
+   "metadata": {},
+   "source": [
+    "* maträtter är textsträngar\n",
+    "* en maträtt verkar inte ha en bild\n",
+    "* saknas samma som för en maträtt så man kan analysera det vidare...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75d120b3",
+   "metadata": {},
+   "source": [
+    "Exempel från [dokumentationen](https://skolmaten.se/about/api/#applikation) \n",
+    "\n",
+    "```\n",
+    "HTTP/1.1 200 OK\n",
+    "Last-Modified: Mon, 07 Mar 2016 19:05:38 GMT\n",
+    "Expires: Mon, 31 Oct 2016 11:46:52 GMT\n",
+    "\n",
+    "{\n",
+    "  \"weeks\": [\n",
+    "    {\n",
+    "      \"year\": 2016,\n",
+    "      \"number\": 46,\n",
+    "      \"days\": [\n",
+    "        {\n",
+    "          \"date\": 1479081600,\n",
+    "          \"meals\": [\n",
+    "            {\n",
+    "              \"value\": \"Korvgryta, ris\",\n",
+    "              \"attributes\": []\n",
+    "            },\n",
+    "            {\n",
+    "              \"value\": \"Vegetarisk korvgryta, ris\",\n",
+    "              \"attributes\": [1]\n",
+    "            }\n",
+    "          ]\n",
+    "        },\n",
+    "        {\n",
+    "          \"date\": 1479168000,\n",
+    "          \"meals\": [\n",
+    "            {\n",
+    "              \"value\": \"Kycklingwok, matvete/ris\",\n",
+    "              \"attributes\": []\n",
+    "            },\n",
+    "            {\n",
+    "              \"value\": \"Bulgurpytt med bönor, kall sås\",\n",
+    "              \"attributes\": []\n",
+    "            }\n",
+    "          ]\n",
+    "        },\n",
+    "        {\n",
+    "          \"date\": 1479254400,\n",
+    "          \"items\": [\n",
+    "            \"Köttbullar, tomatsås, makaroner\",\n",
+    "            \"Minibouletter, sås, makaroner\"\n",
+    "          ]\n",
+    "        }\n",
+    "      ]\n",
+    "    }\n",
+    "  ], \n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c77ab26",
+   "id": "fbae03e4",
    "metadata": {},
    "outputs": [],
    "source": []
