--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,7 +10,7 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.1\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.2\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
@@ -60,7 +60,7 @@
     "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
     "     1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
     ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,\n",
-    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll eller knyta en bild till maten.... det pratades om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts.... det som hittats....\n",
+    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts.... det som hittats....\n",
     "  1. GITHUB som inte säger mer https://sambruk.github.io/Open-Meal/docs/background\n",
     "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom\n",
     "leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt...."
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f059dae3",
+   "id": "9d8d35ee",
    "metadata": {},
    "source": [
     "## Hämta mat serverad\n",
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "15c1b083",
+   "id": "e622b574",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0544398e",
+   "id": "4160384d",
    "metadata": {},
    "source": [
     "Fungerar ej måste ha en client token"
@@ -789,17 +789,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0885068",
+   "id": "8b975b6f",
    "metadata": {},
    "source": [
     "* maträtter är textsträngar\n",
     "* en maträtt verkar inte ha en bild\n",
-    "* saknas samma som för en maträtt så man kan analysera det vidare...\n"
+    "* saknas samma som för en maträtt så man kan analysera det vidare ...\n",
+    "  * med \"samma som\" och inte textsträngar \n",
+    "    * skulle man kunna \n",
+    "       * analysera innehållet i maten\n",
+    "       * jämföra likvärdiga maträtter i olika skolor\n",
+    "       * kanske kunna se vad vi får för våra skattekronor då det gäller skolmat/näringeinnehåll\n",
+    "       * om matsvinnet har en koppling till maträtten eller skolan eller?\n",
+    "       * bygga upp ett bildbibliotek med skomaträtter"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "30c8d761",
+   "id": "262f15af",
    "metadata": {},
    "source": [
     "Exempel från [dokumentationen](https://skolmaten.se/about/api/#applikation) \n",
@@ -857,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020754ee",
+   "id": "db2eb457",
    "metadata": {},
    "outputs": [],
    "source": []
