--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8d35ee",
+   "id": "e638b5fb",
    "metadata": {},
    "source": [
     "## Hämta mat serverad\n",
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e622b574",
+   "id": "0fda48ee",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4160384d",
+   "id": "2d9b778b",
    "metadata": {},
    "source": [
     "Fungerar ej måste ha en client token"
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b975b6f",
+   "id": "92cf3011",
    "metadata": {},
    "source": [
     "* maträtter är textsträngar\n",
@@ -801,12 +801,12 @@
     "       * jämföra likvärdiga maträtter i olika skolor\n",
     "       * kanske kunna se vad vi får för våra skattekronor då det gäller skolmat/näringeinnehåll\n",
     "       * om matsvinnet har en koppling till maträtten eller skolan eller?\n",
-    "       * bygga upp ett bildbibliotek med skomaträtter"
+    "       * bygga upp ett bildbibliotek med skolmaträtter"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "262f15af",
+   "id": "f59cf6ad",
    "metadata": {},
    "source": [
     "Exempel från [dokumentationen](https://skolmaten.se/about/api/#applikation) \n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2eb457",
+   "id": "1c29fdd2",
    "metadata": {},
    "outputs": [],
    "source": []
