--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -22,7 +22,7 @@
     "       * [School meal](https://data.europa.eu/data/datasets?keywords=school-meals&locale=en) --> 1 dataset\n",
     "       * [City of Lund](https://data.europa.eu/data/datasets?keywords=city-of-lund&locale=en) --> 7 datasets\n",
     "* dataportalen \"[Skolmatsmenyer för Ale kommuns skolor](https://www.dataportal.se/datasets/446_2244)\" -> metadata **[446_2244](https://admin.dataportal.se/store/446/metadata/2244?recursive=dcat)**\n",
-    "  * data.europa.eu \"[School food menus for Ale municipality schools](https://data.europa.eu/data/datasets/https-catalog-ale-se-store-1-resource-55?locale=en)\" saknar kategorier och är maskinöversatt...\n",
+    "  * data.europa.eu \"[School food menus for Ale municipality schools](https://data.europa.eu/data/datasets/https-catalog-ale-se-store-1-resource-55?locale=en)\" pekar på samma API saknar kategorier och är maskinöversatt...\n",
     "* dataportalen \"[Skolmatsmenyer för Mariestads kommuns skolor](https://www.dataportal.se/datasets/506_1661) -> metadata **[506_1661](https://admin.dataportal.se/store/506/metadata/1661?recursive=dcat)**\n",
     "  * data.europa.eu \"[School restaurant menu for the municipality of Mariestad](https://data.europa.eu/data/datasets/https-catalog-mariestad-se-store-1-resource-15?locale=en)\" pekar på samma API men saknar kategorier finns dock engelsk metadata i svenska portalen se [506_1661](https://admin.dataportal.se/store/506/metadata/1661?recursive=dcat)\n",
     "* dataportalen \"[Skolmaten på Lidingö](https://www.dataportal.se/datasets/238_35328)\" -> metadata **[238_35328](https://admin.dataportal.se/store/238/metadata/35328?recursive=dcat)**\n",
