--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -41,7 +41,7 @@
     "  * data.europa.eu \"[Skolmat](https://data.europa.eu/data/datasets/https-linkoping-entryscape-net-store-1-resource-28?locale=en)\" verkar vara Linköpings kommun\n",
     "* finns säkert fler som jag missat.... 😅\n",
     "\n",
-    "**Fundering**\n",
+    "**Fundering på svenska portalen och skolmatsdatat**\n",
     "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
     "  1. borde vara i dct:identifier men den pekar även till portalen innan svenska dataportalen se Lund [233_9780](https://data.europa.eu/api/hub/repo/distributions/1d1c2a43-0099-449c-9ae5-71568a4c12b0.rdf) som i EU portalen pekar på https://katalog.lund.se/store/1/resource/11 dvs. tillbaka till Lund jmf svenska portalens metadata [233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)\n",
     "     1. om det är ETT API varför hitta på nya identifierare?!?!? kanske **samma som** behövs\n",
@@ -62,8 +62,8 @@
     ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,\n",
     "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts.... det som hittats....\n",
     "  1. GITHUB som inte säger mer https://sambruk.github.io/Open-Meal/docs/background\n",
-    "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom\n",
-    "leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt...."
+    "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt....\n",
+    "  1. på [Facebook sägs april 27 2020](https://www.facebook.com/groups/openmealinformation/posts/2710894565798755/) att en spec skall presenteras inga tydliga länkar var... klickar man runt hamnar man på [orebrokommun.github.io/Open-Meal-Information](https://orebrokommun.github.io/Open-Meal-Information/swe/historien-bakom-mltidsdata.html)\n"
    ]
   },
   {
