--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,7 +10,7 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.2\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.3\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
@@ -60,8 +60,15 @@
     "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
     "     1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
     ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,\n",
-    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts.... det som hittats....\n",
+    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades Sep 23, 2021 om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts även en brist på en projektyta där NSÖD samplar feedback är svår att hitta.... det som hittats....\n",
     "  1. GITHUB som inte säger mer https://sambruk.github.io/Open-Meal/docs/background\n",
+    "     1. en [3.3 spec utan datum](https://sambruk.github.io/Open-Meal/openapi-specification)\n",
+    "        1. ett [exempel hittas](https://sambruk.github.io/Open-Meal/openapi-specification) men inte hittat dokumentation\n",
+    "          1. nytt 3.3 gissar jag är ( se exempel nedan)\n",
+    "             1. en textsträng med \"ingredients\" där ingridienserna är på engelska och separerade med komma\n",
+    "             1. en array med \"allergens\" där allergenerna är textsträngar på engelska utan \"samma som\"\n",
+    "             1. \n",
+    "     1. en [versions historik](https://sambruk.github.io/Open-Meal/docs/API/version_history) utan datum men med skillnad av senaste spec och Örebro 2015...\n",
     "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt....\n",
     "  1. på [Facebook sägs april 27 2020](https://www.facebook.com/groups/openmealinformation/posts/2710894565798755/) att en spec skall presenteras inga tydliga länkar var... klickar man runt hamnar man på [orebrokommun.github.io/Open-Meal-Information](https://orebrokommun.github.io/Open-Meal-Information/swe/historien-bakom-mltidsdata.html)\n"
    ]
@@ -862,9 +869,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d99b982",
+   "metadata": {},
+   "source": [
+    "## Spec version 3.0\n",
+    "\n",
+    "Hittar inte specen men ett [exempel hos sambruk GITHUB](https://sambruk.github.io/Open-Meal/openapi-specification/)\n",
+    "\n",
+    "```\n",
+    "\"meals\": [\n",
+    "  {\n",
+    "   \"date\": \"2015-05-20T00:00:00\",\n",
+    "   \"lang\": \"en\",\n",
+    "   \"name\": \"Lunch\",\n",
+    "   \"description\": \"Swedish Food Week\",\n",
+    "   \"courses\": [\n",
+    "     {\n",
+    "       \"name\": \"Swedish Meatballs with mashed potatoes\",\n",
+    "       \"order\": 1,\n",
+    "       \"ingredients\": \"Meat, bread crumbs, eggs, milk, potatoes\",\n",
+    "       \"allergens\": [\n",
+    "          \"Egg\",\n",
+    "          \"Milk\",\n",
+    "          \"Nuts\"\n",
+    "          ],\n",
+    "       \"nutrients\": [\n",
+    "          {\n",
+    "            \"name\": \"Energy\",\n",
+    "            \"amount\": \"540\",\n",
+    "            \"unit\": \"kcal\"\n",
+    "          }\n",
+    "        ]\n",
+    "     }\n",
+    "   ]\n",
+    "```\n",
+    "\n",
+    "### Min fundering kring specen jag hitta\n",
+    "1. \"ingredients\" som text strängar på engelska borde vara \"samma som\" så man kan analysera maten\n",
+    "1. \"allergens\" även det textsträngar på engelska....\n",
+    "1. exemplet ovan med textsträngar verkar enormt hafsigt med **ingredients** som en textsträng med komma mellan olika ingridienser, medan allergens är en array ....\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fbebfa7",
+   "metadata": {},
+   "source": [
+    "### Hur borde man tänkt?\n",
+    "1. inga text strängar och peka \"samma som\" så man kan analysera maträtten mera,,,,\n",
+    "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/)\n",
+    "1. skolmats specandet verkar startat 2015 och det borde finnas enklare sätt att lämna input eller se feedback som ges på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) att öppna skoldataplattformen vill ha bilder borde tas om hand lite mera strukturerat och kunna följas vad som händer eller inte händer...\n",
+    "  1. använda tydlig versionshantering med datum\n",
+    "  1. ha en plats där alla synpunkter samlas in\n",
+    "  1. enkelt att se skillnad mellan olika versioner av specar\n",
+    "  1. definiera upp användarfall\n",
+    "     1. gissar dagens lösning fungerar i vardagen att se att imorgon är det köttbullar\n",
+    "     1. dagens lösning fungerar inte för användarfall som\n",
+    "        1. för att få en bild över näringsinnehållet på mat som serveras\n",
+    "        1. att enkelt jmf olika skolor då datat inte har [skolverkets id](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/)\n",
+    "           1. kanske intressant se matinnehåll vs. hur eleverna presterar på nationella prov, matsvinn, skattesats i kommunen vs. mat som serveras, socialgrupp som bor i området och mat som levereras, brottslighete vs. mat som serveras....\n",
+    "        1. påverkar typ av mat som serverar xxxx\n",
+    "        1. att servera skolmaten på barnets hemspråk så att även föräldrar utan svenska kunskaper kan se vad barnet äter i skolan... (är idag tyvärr vanligt att i utsatta områden är språkkunskaperna så dåliga att läraren måste ha tolk på föräldrarsamtalen...)\n",
+    "           "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c29fdd2",
+   "id": "3822c7de",
    "metadata": {},
    "outputs": [],
    "source": []
